--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,15 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+a {
+    color: inherit;
+    text-decoration: none;
+    padding-bottom: 1px;
+
+}
+a:hover {
+    border-bottom: 1px solid white;                    
+}
 strong {
     font-family: 'Roboto Regular', sans-serif;
     font-weight: 900;
@@ -113,7 +122,7 @@ body {
                     width: 80%;
                 }
                 header #profile-info h2,
-                header .column-narrow h2 {
+                header .column-narrow-left h2 {
                     background-color: #2c3e50;
                     line-height: 1.75em;
                     display: inline-block;
@@ -130,41 +139,38 @@ body {
                         border-bottom: 42px solid #00a3e6;
                         border-left: 25px solid transparent;  
                     }
-            header .column-narrow {
+            header .column-narrow-left {
                 width: 280px;
                 float: left;
             }
-                header .column-narrow li {
+                header .column-narrow-left li {
                     list-style: none;
                     margin-left: 0;
                     margin-bottom: 10px;
                     padding-left: 50px;
                     font: normal 1.125em/1.5 'Roboto Light', sans-serif;
                 }
-                header .column-narrow li.icon-phone {
+                header .column-narrow-left li.icon-phone {
                     background: transparent url('../img/icon-phone.png') left top no-repeat;
                     background-size: contain;
                 }
-                header .column-narrow li.icon-mail {
+                header .column-narrow-left li.icon-mail {
                     background: transparent url('../img/icon-mail.png') left top no-repeat;
                     background-size: contain;
                 }
-                header .column-narrow li.icon-skype {
+                header .column-narrow-left li.icon-skype {
                     background: transparent url('../img/icon-skype.png') left top no-repeat;
                     background-size: contain;
                 }
-                header .column-narrow li.icon-code {
+                header .column-narrow-left li.icon-code {
                     background: transparent url('../img/icon-code.png') left top no-repeat;
                     background-size: contain;
                 }
-                header .column-narrow li.icon-code a {
+                a {
                     color: inherit;
                     text-decoration: none;
                     padding-bottom: 1px;
-                }
-                header .column-narrow li.icon-code a:hover {
-                    border-bottom: 1px solid white;                    
-                }
+                }        
             header #right {
                 float: right;
                 width: 650px;
@@ -180,118 +186,154 @@ body {
                 height: 20px;
                 width: 20px;
             }
+/*
+ * Starts Main content
+ */
+#main-content {
+    background-color: #2c3e50;
+    padding: 50px;
+}
+    #main-content .categories span {
+        font-size: 1.75em;
+    }
+/*
+ * Timeline starts
+ */
+#timeline { /* Spine line */
+    background: transparent url(../img/timeline-spine-bg.gif) top center repeat-y;
+    overflow: hidden;
+    list-style: none;
+    position: relative;
+}
+#timeline:after { /* The grey dot in the bottom */
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    margin-left: -10px;
+    content: " ";
+    display: block;
+    background: #969fa8;
+    width: 21px;
+    height: 21px;
+    border-radius: 50%;
+}
+    #timeline li {
+        margin-bottom: 75px;
+        position: relative;
+    }
+        #timeline time {
+            line-height: 4.2;
+            text-align: center;
+            width: 100px;
+            background: #00a3e6;
+            border-radius: 50%;
+            font-weight: bold;
+            font-size: 1.5em;
+            display: inline-block;
+            vertical-align: top;
 
-
-
-        #main-content {
-            background-color: #2c3e50;
-            padding: 2.084%;
-            padding-bottom: 0;
+            position: absolute;
+            left: 44%;
         }
-            #timeline { /* Spine line */
-                background: transparent url(../img/timeline-spine-bg.gif) top center repeat-y;
-                overflow: hidden;
-                list-style: none;
-                position: relative;
-                padding: 0 50px;
-            }
-            #timeline:after { /* The dot */
-                position: absolute;
-                bottom: 0%;
-                left: 50%;
-                margin-left: -10px;
-                content: " ";
-                display: block;
-                background: #969fa8;
-                width: 21px;
-                height: 21px;
-                border-radius: 50%;
-            }
-            #timeline section span.branch-lines {
-                width: 0;
-                height: 0;
-                position: absolute;
-                left: 95%;
-                top: 50%;
-                z-index: 2;
-                border-bottom: 2px solid #00a3e6;
-                border-right: 75px solid #00a3e6;
-            }
-            #timeline section:first-child span.branch-lines:after { /* Removes vertical branch lines */
-                border: 0;
-            }
-            #timeline section:first-child span.branch-lines {
-                border-right: 123px solid #00a3e6;
-            }
-            #timeline li {
-                margin-bottom: 75px;
-                position: relative;
-            }
-            #timeline li time {
-                line-height: 4.2;
-                text-align: center;
-                width: 100px;
-                background: #00a3e6;
-                border-radius: 50%;
-                font-weight: bold;
-                font-size: 1.5em;
+        #timeline section {
+            display: inline-block;
+            margin-top: 30px;
+            margin-right: 60px;
+        }
+        #timeline .column-narrow-left {
+            width: 300px;
+        }
+        #timeline .column-narrow-right {
+            clear: right;
+            float: right;
+            width: 270px;
+            margin-right: 0;
+            margin-left: 60px;
+        }
+            #timeline section h2 {
+                margin-top: 0;
+                background-color: #ecf0f1;
+                color: #2c3e50;
+                line-height: 1.75em;
                 display: inline-block;
-                vertical-align: top;
+                position: relative;
+                z-index: 0;
             }
-            #timeline li .column-narrow {
-                text-align: left;
-                display: inline-block;
-                width: 360px;
-                margin-top: 30px;
+            #timeline .column-narrow-right h2 {
+                width: 230px;
+                padding-left: 40px;
             }
-            #timeline li .column-narrow:after { /* Draws vertical branches */
+            #timeline .column-narrow-left h2 {
+                width: 250px;
+                padding-left: 20px;
+            }
+            #timeline section h2:before { /* Blue circles in h2 */
                 content: "";
                 display: inline-block;
-                width: 0;
-                height: 0;
-                position: absolute;
-                top: 15.95%;
-                left: 40.2%;
-                border-top: 173px solid #00a3e6;
-                border-right: 2px solid #00a3e6;
+                width: 16px;
+                height: 16px;
+                margin-right: 5px;
+                border-radius: 50%;
+                background-color: #2c3e50; 
             }
-            #timeline li .column-narrow:first-child:after { /* Removes vertical branches */
-                display: none;
+                #timeline section h2 .triangle {
+                    position: absolute;
+                    width: 0;
+                    height: 0;
+                    border-bottom: 42px solid #2c3e50;
+                }
+                #timeline .column-narrow-right h2 .triangle {
+                    left: 0;
+                    border-right: 25px solid transparent;
+                }
+                #timeline .column-narrow-left h2 .triangle {
+                    right: 0;
+                    border-left: 25px solid transparent;
+                }
+                #timeline .branch-lines {
+                    width: 0;
+                    height: 0;
+                    position: absolute;
+                    top: 50%;
+                    z-index: 2;
+                    border-bottom: 2px solid #00a3e6;
+                    border-right: 130px solid #00a3e6;
+                }
+                #timeline .column-narrow-left .branch-lines {
+                    left: 95%;
+                }
+                #timeline .column-narrow-right .branch-lines {
+                    right: 95%;
+                }
+                #timeline .secondary-nodes .branch-lines {
+                    clear: right; /* Clears floating for secondary nodes in a li */
+                    border-right: 91px solid #00a3e6;
+                }
+                #timeline .secondary-nodes:after { /* Vertical branches */
+                    content: "";
+                    display: inline-block;
+                    width: 0;
+                    height: 0;
+                    position: absolute;
+                    top: 15.95%;
+                    border-top: 173px solid #00a3e6;
+                    border-right: 2px solid #00a3e6;
+                }
+                #timeline .column-narrow-left.secondary-nodes:after {
+                    left: 40.2%;
+                }
+                #timeline .column-narrow-right.secondary-nodes:after {
+                    right: 40.2%;
+                }
+            #timeline .column-narrow-right p {
+                padding-left: 70px;
             }
-                #timeline li .column-narrow h2 {
-                    margin-top: 0;
-                    background-color: white;
-                    color: #2c3e50;
-                    line-height: 1.75em;
-                    display: inline-block;
-                    width: 270px;
-                    position: relative;
-                    padding-left: 20px;
-                    box-sizing: border-box;
-                    z-index: 0;
-                }
-                #timeline li .column-narrow h2:before { /* Blue circles in h2 */
-                    content: " ";
-                    display: inline-block;
-                    width: 16px;
-                    height: 16px;
-                    margin-right: 5px;
-                    border-radius: 50%;
-                    background-color: #2c3e50; 
-                }
-                #timeline li .column-narrow p {
-                    padding-left: 50px;
-                }
-                    #timeline h2 .triangle {
-                        position: absolute;
-                        right: 0;
-                        width: 0;
-                        height: 0;
-                        border-bottom: 42px solid #2c3e50;
-                        border-left: 25px solid transparent;
-                        z-index: 1;
-                    }
-
+            #timeline .column-narrow-left p {
+                padding-left: 50px;
+            }
+/*
+ * Timeline ends
+ */
 
 
 
