--- a/css/main.css
+++ b/css/main.css
@@ -85,114 +85,116 @@ ol {
 ol li p {
     margin: 0;
 }
-
+.right-floated-container {
+    float: right;
+}
+.wrapper {
+    padding-top: 20px;
+    width: 960px;
+    margin: 0 auto;
+}
+.triangle {
+    position: absolute;
+    width: 0;
+    height: 0;
+}
 body {
     font: 100 16px/1.3em 'Roboto Light', sans-serif;
     color: white;
 }
-    #wrapper {
-        width: 960px;
-        margin: 0 auto;
+/*
+ * Header starts
+ */
+header {
+    background-color: #00a3e6;
+    position: relative;
+}
+    header section {
+        display: inline-block;    
+        margin-left: 20px;
     }
-        header {
-            padding: 2.084%;
-            padding-bottom: 0;
-            background-color: #00a3e6;
-            position: relative;
+    header section:first-child {
+        margin-left: 0;
+    }
+    header #profile-image {
+        width: 17.5%;
+        padding: 50px 0 0 50px;
+    }
+        header #profile-image img {
+            width: 100%;
         }
-            header section {
-                display: inline-block;    
-                margin-left: 20px;
-            }
-            header section:first-child {
-                margin-left: 0;
-            }
-            header #profile-image {
-                width: 17.5%;
-                padding: 50px 0 0 50px;
-            }
-                header #profile-image img {
-                    width: 100%;
-                }
-            header #profile-info {
-                width: 346px;
-                float: left;                
-            }
-                header #profile-info p {
-                    width: 80%;
-                }
-                header #profile-info h2,
-                header .column-narrow-left h2 {
-                    background-color: #2c3e50;
-                    line-height: 1.75em;
-                    display: inline-block;
-                    width: 250px;
-                    position: relative;
-                    padding-left: 20px;
-                    box-sizing: border-box;
-                }
-                    header h2 .triangle {
-                        position: absolute;
-                        right: 0;
-                        width: 0;
-                        height: 0;
-                        border-bottom: 42px solid #00a3e6;
-                        border-left: 25px solid transparent;  
-                    }
-            header .column-narrow-left {
-                width: 280px;
-                float: left;
-            }
-                header .column-narrow-left li {
-                    list-style: none;
-                    margin-left: 0;
-                    margin-bottom: 10px;
-                    padding-left: 50px;
-                    font: normal 1.125em/1.5 'Roboto Light', sans-serif;
-                }
-                header .column-narrow-left li.icon-phone {
-                    background: transparent url('../img/icon-phone.png') left top no-repeat;
-                    background-size: contain;
-                }
-                header .column-narrow-left li.icon-mail {
-                    background: transparent url('../img/icon-mail.png') left top no-repeat;
-                    background-size: contain;
-                }
-                header .column-narrow-left li.icon-skype {
-                    background: transparent url('../img/icon-skype.png') left top no-repeat;
-                    background-size: contain;
-                }
-                header .column-narrow-left li.icon-code {
-                    background: transparent url('../img/icon-code.png') left top no-repeat;
-                    background-size: contain;
-                }
-                a {
-                    color: inherit;
-                    text-decoration: none;
-                    padding-bottom: 1px;
-                }        
-            header #right {
-                float: right;
-                width: 650px;
-            }
-            header #up-arrow {
-                display: block;
-                position: absolute;
-                left: 14.4%;
-                bottom: -4%;
-                transform: rotate(45deg);
-                -webkit-transform: rotate(45deg);
+    header .right-floated-container {
+        width: 650px;
+    }
+        header #profile-info {
+            width: 346px;
+            float: left;                
+        }
+            header #profile-info h2,
+            header .column-narrow-left h2 {
                 background-color: #2c3e50;
-                height: 20px;
-                width: 20px;
+                line-height: 1.75em;
+                display: inline-block;
+                width: 250px;
+                position: relative;
+                padding-left: 20px;
+                box-sizing: border-box;
             }
+                header h2 .triangle {
+                    right: 0;
+                    border-bottom: 42px solid #00a3e6;
+                    border-left: 25px solid transparent;  
+                }
+            header #profile-info p {
+                width: 80%;
+            }
+        header .column-narrow-left {
+            width: 280px;
+        }
+            header .column-narrow-left li {
+                list-style: none;
+                margin-left: 0;
+                margin-bottom: 10px;
+                padding-left: 50px;
+                font: normal 1.125em/1.5 'Roboto Light', sans-serif;
+            }
+            header .column-narrow-left li.icon-phone {
+                background: transparent url('../img/icon-phone.png') left top no-repeat;
+                background-size: contain;
+            }
+            header .column-narrow-left li.icon-mail {
+                background: transparent url('../img/icon-mail.png') left top no-repeat;
+                background-size: contain;
+            }
+            header .column-narrow-left li.icon-skype {
+                background: transparent url('../img/icon-skype.png') left top no-repeat;
+                background-size: contain;
+            }
+            header .column-narrow-left li.icon-code {
+                background: transparent url('../img/icon-code.png') left top no-repeat;
+                background-size: contain;
+            }  
+    header #up-arrow {
+        display: block;
+        position: absolute;
+        left: 31.2%;
+        bottom: -4%;
+        -webkit-transform: rotate(45deg);
+        transform: rotate(45deg);
+        background-color: #2c3e50;
+        height: 20px;
+        width: 20px;
+    }
 /*
  * Starts Main content
  */
 #main-content {
     background-color: #2c3e50;
-    padding: 50px;
 }
+    #main-content .categories,
+    #timeline {
+        padding: 0 30px 0 30px;
+    }
     #main-content .categories span {
         font-size: 1.75em;
     }
@@ -218,7 +220,7 @@ body {
     border-radius: 50%;
 }
     #timeline li {
-        margin-bottom: 75px;
+        margin-bottom: 50px;
         position: relative;
     }
         #timeline time {
@@ -233,7 +235,7 @@ body {
             vertical-align: top;
 
             position: absolute;
-            left: 44%;
+            left: 44.4%;
         }
         #timeline section {
             display: inline-block;
@@ -248,7 +250,6 @@ body {
             float: right;
             width: 270px;
             margin-right: 0;
-            margin-left: 60px;
         }
             #timeline section h2 {
                 margin-top: 0;
@@ -277,9 +278,6 @@ body {
                 background-color: #2c3e50; 
             }
                 #timeline section h2 .triangle {
-                    position: absolute;
-                    width: 0;
-                    height: 0;
                     border-bottom: 42px solid #2c3e50;
                 }
                 #timeline .column-narrow-right h2 .triangle {
@@ -297,7 +295,7 @@ body {
                     top: 50%;
                     z-index: 2;
                     border-bottom: 2px solid #00a3e6;
-                    border-right: 130px solid #00a3e6;
+                    border-right: 145px solid #00a3e6;
                 }
                 #timeline .column-narrow-left .branch-lines {
                     left: 95%;
@@ -307,7 +305,7 @@ body {
                 }
                 #timeline .secondary-nodes .branch-lines {
                     clear: right; /* Clears floating for secondary nodes in a li */
-                    border-right: 91px solid #00a3e6;
+                    border-right: 107px solid #00a3e6;
                 }
                 #timeline .secondary-nodes:after { /* Vertical branches */
                     content: "";
