--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ a {
     color: inherit;
     text-decoration: none;
     padding-bottom: 1px;
-
+    border-bottom: 1px dotted #ecf0f1;
 }
 a:hover {
     border-bottom: 1px solid white;                    
@@ -75,6 +75,7 @@ strong {
 }
 ul, ol {
     padding: 0;
+    list-style: none;
 }
 ul li {
     margin-left: 50px; /* icon width */
@@ -85,42 +86,53 @@ ol {
 ol li p {
     margin: 0;
 }
-
+.right-floated-container {
+    float: right;
+}
+.wrapper {
+    padding-top: 20px;
+    width: 960px;
+    margin: 0 auto;
+}
+.triangle {
+    position: absolute;
+    width: 0;
+    height: 0;
+}
 body {
-    font: 100 16px/1.3em 'Roboto Light', sans-serif;
+    font: lighter 16px/1.3em 'Roboto', 'Verdana';
     color: white;
 }
-    #wrapper {
-        width: 960px;
-        margin: 0 auto;
+/*
+ * Header starts
+ */
+header {
+    background-color: #00a3e6;
+}
+    header .wrapper {
+        position: relative;
     }
-        header {
-            padding: 2.084%;
-            padding-bottom: 0;
-            background-color: #00a3e6;
-            position: relative;
+        header section {
+            display: inline-block;    
+            margin-left: 20px;
         }
-            header section {
-                display: inline-block;    
-                margin-left: 20px;
+        header section:first-child {
+            margin-left: 0;
+        }
+        header #profile-image {
+            width: 17.5%;
+            padding: 50px 0 0 50px;
+        }
+            header #profile-image img {
+                width: 100%;
             }
-            header section:first-child {
-                margin-left: 0;
-            }
-            header #profile-image {
-                width: 17.5%;
-                padding: 50px 0 0 50px;
-            }
-                header #profile-image img {
-                    width: 100%;
-                }
+        header .right-floated-container {
+            width: 650px;
+        }
             header #profile-info {
                 width: 346px;
                 float: left;                
             }
-                header #profile-info p {
-                    width: 80%;
-                }
                 header #profile-info h2,
                 header .column-narrow-left h2 {
                     background-color: #2c3e50;
@@ -132,70 +144,66 @@ body {
                     box-sizing: border-box;
                 }
                     header h2 .triangle {
-                        position: absolute;
                         right: 0;
-                        width: 0;
-                        height: 0;
                         border-bottom: 42px solid #00a3e6;
                         border-left: 25px solid transparent;  
                     }
+                header #profile-info p {
+                    width: 80%;
+                }
             header .column-narrow-left {
                 width: 280px;
-                float: left;
             }
                 header .column-narrow-left li {
                     list-style: none;
                     margin-left: 0;
                     margin-bottom: 10px;
                     padding-left: 50px;
-                    font: normal 1.125em/1.5 'Roboto Light', sans-serif;
+                    font: normal 1.125em/1.67 'Roboto Light', sans-serif;
                 }
                 header .column-narrow-left li.icon-phone {
-                    background: transparent url('../img/icon-phone.png') left top no-repeat;
-                    background-size: contain;
+                    background: url('../img/icons-sprite.png') no-repeat 0px 0px;
                 }
                 header .column-narrow-left li.icon-mail {
-                    background: transparent url('../img/icon-mail.png') left top no-repeat;
-                    background-size: contain;
+                    background: url('../img/icons-sprite.png') no-repeat 0px -41px;
                 }
                 header .column-narrow-left li.icon-skype {
-                    background: transparent url('../img/icon-skype.png') left top no-repeat;
-                    background-size: contain;
+                    background: url('../img/icons-sprite.png') no-repeat 0px -83px;
                 }
                 header .column-narrow-left li.icon-code {
-                    background: transparent url('../img/icon-code.png') left top no-repeat;
-                    background-size: contain;
+                    background: url('../img/icons-sprite.png') no-repeat 0px -121px;
                 }
-                a {
-                    color: inherit;
-                    text-decoration: none;
-                    padding-bottom: 1px;
-                }        
-            header #right {
-                float: right;
-                width: 650px;
-            }
-            header #up-arrow {
-                display: block;
-                position: absolute;
-                left: 14.4%;
-                bottom: -4%;
-                transform: rotate(45deg);
-                -webkit-transform: rotate(45deg);
-                background-color: #2c3e50;
-                height: 20px;
-                width: 20px;
-            }
+        header #up-arrow {
+            display: block;
+            height: 20px;
+            width: 20px;
+            position: absolute;
+            left: 12.5%;
+            bottom: -4%;
+            -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+            background-color: #2c3e50;
+        }
 /*
  * Starts Main content
  */
 #main-content {
     background-color: #2c3e50;
-    padding: 50px;
 }
-    #main-content .categories span {
-        font-size: 1.75em;
+    #main-content .wrapper {
+        padding-bottom: 20px;
     }
+        #main-content .categories ~.categories {
+            margin: 20px 0;
+        }
+        #main-content .categories,
+        #timeline,
+        #skills {
+            padding: 0 30px;
+        }
+        #main-content .categories span {
+            font-size: 1.75em;
+        }
 /*
  * Timeline starts
  */
@@ -218,7 +226,7 @@ body {
     border-radius: 50%;
 }
     #timeline li {
-        margin-bottom: 75px;
+        margin-bottom: 50px;
         position: relative;
     }
         #timeline time {
@@ -230,10 +238,8 @@ body {
             font-weight: bold;
             font-size: 1.5em;
             display: inline-block;
-            vertical-align: top;
-
             position: absolute;
-            left: 44%;
+            left: 44.5%;
         }
         #timeline section {
             display: inline-block;
@@ -248,7 +254,6 @@ body {
             float: right;
             width: 270px;
             margin-right: 0;
-            margin-left: 60px;
         }
             #timeline section h2 {
                 margin-top: 0;
@@ -267,19 +272,16 @@ body {
                 width: 250px;
                 padding-left: 20px;
             }
-            #timeline section h2:before { /* Blue circles in h2 */
+            #timeline section h2:before { /* The small dark-blue circles in h2 */
                 content: "";
                 display: inline-block;
                 width: 16px;
                 height: 16px;
                 margin-right: 5px;
                 border-radius: 50%;
-                background-color: #2c3e50; 
+                background-color: #2c3e50;
             }
                 #timeline section h2 .triangle {
-                    position: absolute;
-                    width: 0;
-                    height: 0;
                     border-bottom: 42px solid #2c3e50;
                 }
                 #timeline .column-narrow-right h2 .triangle {
@@ -297,7 +299,7 @@ body {
                     top: 50%;
                     z-index: 2;
                     border-bottom: 2px solid #00a3e6;
-                    border-right: 130px solid #00a3e6;
+                    border-right: 145px solid #00a3e6;
                 }
                 #timeline .column-narrow-left .branch-lines {
                     left: 95%;
@@ -307,7 +309,7 @@ body {
                 }
                 #timeline .secondary-nodes .branch-lines {
                     clear: right; /* Clears floating for secondary nodes in a li */
-                    border-right: 91px solid #00a3e6;
+                    border-right: 107px solid #00a3e6;
                 }
                 #timeline .secondary-nodes:after { /* Vertical branches */
                     content: "";
@@ -335,14 +337,110 @@ body {
  * Timeline ends
  */
 
+/*
+ * Skill category starts
+ */
+#skills {
+    margin: 0;
+}
+    #skills li {
+        display: inline-block;
+        width: 25%;
+        float: left;
+        margin: 0;
+    }
+        #skills li span[data-percentage="85"]:before,
+        #skills li span[data-percentage="85"]:after,
+        #skills li span[data-percentage="75"]:before,
+        #skills li span[data-percentage="50"]:before {
+            content: "";
+            display: block;
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 15px solid #00a3e6;
+        }
+        #skills li span[data-percentage="85"]:before { /* Draws a white border 25% long */
+            position: absolute;
+            border-right-color: white;
+            -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+        }
+        #skills li span[data-percentage="85"]:after { /* Reduces the white border with 10% */
+            border: 15px solid transparent;
+            border-right: 15px solid #00a3e6;
+            -webkit-transform: rotate(9deg);
+            transform: rotate(9deg);
+        }
+        #skills li span[data-percentage="75"]:before { /* 75% blue circle */
+            border-right-color: white;
+            -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg)
+        }
+        #skills li span[data-percentage="50"]:before { /* 50% blue circle */
+            border-right-color: white;
+            border-bottom-color: white;
+            -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg)
+        }
+        #skills div {
+            position: relative;
+        }
+        #skills li span[data-percentage]+span {
+            position: absolute;
+            top: 44%;
+            left: 25%;
+            font-size: 2.5em;
+        }
+        #skills li p {
+            margin: 10px 0;
+            padding-left: 20px;
+            font-size: 1.2em;
+        }
+/*
+ * Skill category ends
+ */
 
+/*
+ * Main-content ends
+ */
 
+/*
+ * Footer starts
+ */
 
-
-
-
-
-
+footer {
+    color: #2c3e50;
+}
+    footer .wrapper {
+        padding-bottom: 20px;
+    }
+        footer .categories div {
+            width: 27%;
+            display: inline-block;
+        }
+            footer h3 {
+                margin: 5px 0 5px 2px;
+            }
+            footer h3:before {
+                content: "";
+                display: inline-block;
+                width: 10px;
+                height: 10px;
+                margin-right: 20px;
+                border-radius: 50%;
+                background-color: #2c3e50;    
+            }    
+            footer div + div h2 {
+                text-align: right;
+            }
+            footer .right-floated-container p {
+                margin: 0;
+                padding-left: 10px;
+            }
+/* 
+ * Footer ends
+ */
 
 /* ==========================================================================
    Media Queries
