--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,7 @@ body {
             opacity: 1;
             transition: max-height .25s cubic-bezier(.55, 0, .1, 1), opacity .25s linear, margin .25s linear;
             margin: 0;
+            transform: translateZ(0);
         }
         .site-header .toggle-target.slide,
         #timeline .toggle-target.slide,
